<resources>
    <string name="app_name">ToDo List</string>
    <string name="hint_email_text"> Masukkan Email </string>
    <string name="hint_password_text"> Masukkan Password </string>
    <string name="hint_password2_text"> Konfirmasi Password </string>
    <string name="hint_pencarian_text"> Telusuri </string>
    <string name="hint_judul2_text"> Judul </string>
    <string name="hint_jdllist_text"> Judul To Do List </string>
    <string name="hint_isi_text"> masukkan isi catatan </string>
    <string name="hint_nama">NAMA</string>
    <string name="hint_Email">EMAIL</string>
    <string name="hint_itemlist">Item List</string>
    <string name="btn_password_text">Password</string>
    <string name="btn_register_text">Daftar?</string>
    <string name="btn_updatetask_text">Update Task</string>
    <string name="btn_in_text">Masuk</string>
    <string name="btn_add_task">Tambah</string>
    <string name="btn_profile_image">Gambar Profil Pengguna</string>
    <string name="btn_tutuptask_image">Button Close</string>
    <string name="btn_saveadd_image">Save</string>
    <string name="btn_saveprf">SIMPAN</string>
    <string name="btn_ceklis">CEKLIS</string>
    <string name="btn_catatan">CATATAN</string>
    <string name="btn_images">GAMBAR</string>
    <string name="btn_mnutmbh">MENU TAMBAH</string>
    <string name="btn_tmbhlist">Tambah List</string>
    <string name="btn_ttplist">Tutup List List</string>
    <string name="btn_ttpadd">Tutup List List</string>
    <string name="btn_hpslist">Hapus List List List</string>
    <string name="label_login">LOGIN</string>
    <string name="label_judul_text"> Judul </string>
    <string name="label_jdltalek">Urutkan Menurut</string>
    <string name="label_rbtalek">Custom</string>
    <string name="label_rbtalek2">Tanggal Dibuat</string>
    <string name="label_rbtalek3">Tanggal Diubah</string>
    <string name="label_menu">LOGIN</string>
    <string name="label_prfile">PROFILE</string>
    <string name="label_judul">Catatan Baru</string>
    <string name="label_telusuri">Telusuri</string>
    <string name="label_register">DAFTAR</string>
    <string name="label_jdlmnu"> CATATAN </string>
    <string name="label_tmbhmnu"> Tambah Catatan </string>
    <string name="label_tdlsap"> ToDo List </string>
    <string name="label_lblmnu"> Label </string>
    <string name="label_allist"> Tugas </string>
    <string name="label_plslist"> Tambah Label </string>
    <string name="label_ftprfil"> Foto Profile </string>
    <string name="label_dftritem">Daftar Item</string>
    <string name="label_cntngitm"> Item Dicentang </string>
    <string name="label_itmdone"> Item Selesai Dicentang </string>
    <string name="desc_icon_filter">Tombol Filter</string>
    <string name="desc_sort_icon">Tombol Sortir</string>
    <string name="desc_menu_button">Tombol Menu Navigasi</string>
    <string name="desc_tutup_button">Tombol Tutup Catatan</string>
    <string name="desc_gambar_preview">Gambar Add</string>
    <string name="desc_pilihgambar_button">pilih Gambar Add</string>
    <string name="desc_add_task_fab">Tombol Menu tambah</string>
    <string name="default_date_preview">Diubah: 31 Oktober 2025</string>
    <string name="desc_edit_task">Edit Task Button</string>
    <string name="desc_delete_task">Delete Task Button</string>
    <string name="desc_logo_app">Logo aplikasi ToDo List berupa ikon daftar centang.</string>
    <string name="nav_open">Buka menu navigasi</string>
    <string name="nav_close">Tutup menu navigasi</string>

</resources>