<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="8dp"

    app:cardBackgroundColor="#f5f5dc"  app:cardCornerRadius="10dp" app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"

            android:text="@string/label_judul"  android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvModifiedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/default_date_preview"
            android:textSize="15sp"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#CCCCCC"/>

        <TextView
            android:id="@+id/tvNoteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:maxLines="7"
            android:ellipsize="end"
            android:text="@string/hint_isi_text"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>

        <ImageButton
            android:id="@+id/editImg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit"
            app:tint="#598a75"
            android:contentDescription="@string/desc_edit_task"/>

        <ImageButton
            android:id="@+id/deleteImg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_delete_task"
            android:src="@drawable/ic_delete"
            app:tint="#D32F2F" />
    </LinearLayout>
</androidx.cardview.widget.CardView>