<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#598a75"
    tools:context=".LoginActivity2"
    tools:ignore="TooWide, MissingConstraints">

    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="286dp"
        android:layout_height="220dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/desc_logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_edittext_dark"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_email_text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_edittext_dark"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/hint_password_text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/btn_in"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#003a2d"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btn_in_text"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:layout_marginTop="20dp" />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#ffffff"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btn_register_text"
        android:textColor="#003a2d"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_in"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_login"
        android:textSize="34sp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="327dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_app"/>



</androidx.constraintlayout.widget.ConstraintLayout>


