<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskListFragment"> <androidx.core.widget.NestedScrollView
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#598a75">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="100dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:src="@drawable/menu"
                app:tint="#f5f5dc"
                android:scaleType="centerCrop"
                android:contentDescription="@string/desc_menu_button"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chipContainer"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_search_input"
                android:clickable="false"
                android:focusable="false">

                <TextView
                    android:id="@+id/tv_telusuri"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_telusuri"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/icon_sort"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"/>
                <ImageButton
                    android:id="@+id/icon_filter"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc_icon_filter"
                    android:src="@drawable/ic_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageButton
                    android:id="@+id/icon_sort"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="4dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/icon_filter"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/desc_sort_icon"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/profileCard"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageButton
                    android:id="@+id/profileImage"
                    android:layout_width="48dp"

                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btn_profile_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/incon"
                    android:clickable="false"
                    android:focusable="false" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edSearchActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:hint="@string/hint_pencarian_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edSearchEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionSearch" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:minHeight="400dp"
            android:orientation="vertical"
            android:overScrollMode="never" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addTaskFABtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_add_circle"
        app:iconSize="25dp"
        app:iconTint="@color/white"
        android:text="@string/btn_add_task"
        android:contentDescription="@string/desc_add_task_fab"  />

</androidx.coordinatorlayout.widget.CoordinatorLayout>